typecheck/tests/micro/good/call_arg.c
//call a function with no argument

void apple(void)
{
 return;
}

void main(void)
{
	apple();
return;
}
