typecheck/tests/micro/bad/if_void.c
void apple(void)
{return;
}

void main(void)
{
	if(apple())
	{}
return;
}
